# CNCSim

./: .gitignore  Deutsch_Jozsa_Circuit.ipynb  generating_stab_tableaus.txt  main.py  pyproject.toml
circuits/: ccz_7T_decomposition.py  dj_circuit.py  hidden_shift.py  toff_7T_decomposition.py
libs/: generating_cnc_tableaus.py  generating_stab_tableaus.py
src/: chp.py  cnc_set.py  cnc_simulator.py  compile_keys.py  jordan_wigner_set.py  qasm_prep.py  qcm_functions.py  qcm_sim.py  tableau_helper_functions.py  useful_types.py
tests/: anticommuting_tests.py  symplectic_tests.py
