[project]
name = "cncsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.11.0",
    "galois>=0.4.7",
    "h5py>=3.15.1",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pylint>=4.0.4",
    "pytest>=9.0.1",
    "qiskit==0.46.3",
    "qiskit-aer>=0.14.2",
]
